--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 
 
 
-<img src ="robot.jpg" alt = "robot" width="300" height="400" class="image">
+<img src ="robot.jpg" alt = "Ropot" width="300" height="400" class="image">
 
 <button class="button
 button1 f">forward</button>
